# ScarletDME

./: .gitignore  CMakeLists.txt  Makefile  buildgpl  buildgpl.sh  qmconfig
_isolation/: README
basesys/: README
basesys/$IPC/: ~0
basesys/$LOGINS/: ~0
basesys/ACCOUNTS/: ~0
basesys/VOC/: ~0
cmake/: dtrace.cmake
etc/: scarlet.conf.example
gplsrc/: analyse.c  b64.c  clopts.c  config.c  descr.h  dh.h  dh_close.c  dh_creat.c  dh_exist.c  dh_fmt.h  dh_hash.c  dh_misc.c  dh_open.c  dh_read.c  dh_write.c  header.h  ingroup.c  inipath.c  k_funcs.c  kernel.c  linuxlb.c  linuxprt.c  messages.c  netfiles.c  op_arith.c  op_btree.c  op_ccall.c  op_chnge.c  op_config.c  op_dio3.c  op_dio4.c  op_exec.c  op_kernel.c  op_loads.c  op_logic.c  op_misc.c  op_oconv.c  op_sort.c  op_stop.c  op_str2.c  (+13 more)
include/: dh_int.h  dh_stat.h  header.h  linuxlb.h  probes_qm.d  qm.h  qmdefs.h  trace.h
src/: CMakeLists.txt  analyse.c  ctype.c  dh_ak.c  dh_clear.c  dh_del.c  dh_file.c  dh_hash.c  dh_read.c  dh_selct.c  dh_split.c  k_error.c  kernel.c  linuxio.c  lnx.c  lnxport.c  object.c  objprog.c  op_array.c  op_config.c  op_debug.c  op_dio1.c  op_dio2.c  op_find.c  op_iconv.c  op_jumps.c  op_locat.c  op_lock.c  op_misc.c  op_mvfun.c  op_seqio.c  op_sh.c  op_skt.c  op_str1.c  op_str3.c  op_str5.c  op_sys.c  op_tio.c  pdump.c  qm.c  (+13 more)
support-files/systemtap/: example.stp
tapset/: qm.stp
work/pcode/: test.comp  test.comp.noxref  test.py
work/pcode/code/: __init__.py
work/pyopgen/: opgen.py
